Change titl size Fix partner section spacing

--- a/src/sections/entry/entry.module.css
+++ b/src/sections/entry/entry.module.css
@@ -34,6 +34,10 @@
   margin-bottom: calc(var(--base-spacing) * 10);
 }
 
+.content h1 {
+  font-size: calc(var(--base-spacing)*5) !important;
+}
+
 .body {
   margin-bottom: calc(var(--base-spacing) * 4);
 }
