--- a/src/sections/our-mission/OurMission.module.css
+++ b/src/sections/our-mission/OurMission.module.css
@@ -42,6 +42,23 @@
   margin: 0 auto;
 }
 
+
+[data-sponsor="netrocks"] {
+  grid-column: 1 / 3;
+}
+
+[data-sponsor="netlight"] {
+  grid-column: 1 / 3;
+}
+
+[data-sponsor="netlight"] img, [data-sponsor="netrocks"] img
+{
+  height: 66px;
+  display: block;
+  object-fit: cover;
+  width: 100%;
+}
+
 @media (min-width: 767px) {
   .gridItemLeft {
     justify-self: start;
@@ -55,14 +72,10 @@
     border-top-right-radius: 75px;
     border-bottom-right-radius: 75px;
   }
-}
 
-[data-sponsor="netrocks"] {
-  grid-area: 1 / 1 / 2 / 4;
-}
-
-[data-sponsor="netlight"] {
-  grid-area: 2 / 1 / 3 / 4;
+  [data-sponsor="netlight"] img, [data-sponsor="netrocks"] img {
+    height: 80px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -74,6 +87,9 @@
   }
   [data-sponsor="netlight"] {
     grid-area: 1 / 3 / 2 / 5;
+  }
+  [data-sponsor="netlight"] img, [data-sponsor="netrocks"] img {
+    height: auto;
   }
 }
 
@@ -101,7 +117,7 @@
 .sponsorGrid {
   display: grid;
   /*height: 120px;*/
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
   grid-template-rows: auto auto auto;
   grid-gap: calc(var(--base-spacing) * 3);
   align-items: center;
